k8s/postgres-custer-ip-service.yml
apiVersion: v1
kind: Service
metadata: 
  name: postgres-cluster-id-service #host name for connecting
spec:
  type: ClusterIP
  selector: 
    component: postgres
  ports:
    - port: 5432
      targetPort: 5432
