k8s/redis-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster-ip-service #host name for connecting
spec:
  type: ClusterIP
  selector:
    component: redis
  ports:
    - port: 6379 #outside
      targetPort: 6379 #inside
